<resources>
    <string name="app_name">Nutrition tracker</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="bad_credentials">Bad credentials!</string>
    <string name="credentials_short">Username and password must be longer than 4 characters</string>
    <string name="error">Error encountered</string>
    <string name="categories">Categories</string>
    <string name="mealsInCategory">Meals in</string>
    <string name="data_fetched">Fresh data fetched from the server</string>
    <string name="save_meal">Save meal</string>
    <string name="update_meal">Update meal</string>
    <string name="delete_meal">Delete meal</string>
    <string name="edit_meal">Edit meal</string>
    <string name="data_not_available">Data not available</string>
    <string name="detailedMealCategory">Category: </string>
    <string name="detailedMealArea">Area: </string>
    <string name="detailedMealInstructions">How to prepare?</string>
    <string name="detailedMealTags">Tags:</string>
    <string name="detailedMealVideo">Video:</string>
    <string name="detailedMealIngredients">Ingredients:</string>
    <string name="searchByMeals">Search by meals</string>
    <string name="saveMeal">Save meal</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="supper">Supper</string>
    <string name="dinner">Dinner</string>
    <string name="apiMeals">All Meals</string>
    <string name="savedMeals">Saved Meals</string>
    <string name="mealAdded">Meal successfully added</string>
    <string name="mealUpdated">Meal successfully updated</string>
    <string name="mealStatisticTitle">Meals added in the past 7 days</string>
    <string name="statistics">Statistics</string>
    <string name="savedCaloriesStatistics">Saved Calories</string>
    <string name="calories">Calories</string>
    <string name="caloriesLowerBond">Greater then</string>
    <string name="caloriesUpperBond">Less then</string>
    <string name="fetchCalories">Fetch calories</string>
    <string name="sortAndFilter">Sort and filter</string>
    <string name="filter">Filter</string>
    <string name="plan">Plan</string>
    <string name="calorieFilterTitle">Filter and sort by calories</string>
    <string name="error_string_not_number">Inputs must be numbers!</string>
    <string name="error_no_kcal_list">Calories have to be fetched first!</string>
    <string name="bodyDailyCalorie">Body calorie calculator</string>
    <string name="missingIngredients">Some ingredients couldnt be counted in the calories!</string>
    <string name="calorieCalculatorAge">Age</string>
    <string name="calorieCalculatorHeight">Height in cm</string>
    <string name="calorieCalculatorWeight">Weight in kg</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="inactive">Inactive</string>
    <string name="mediumActive">Medium active</string>
    <string name="highlyActive">Highly active</string>
    <string name="submit">Submit</string>
    <string name="calorieCalculator">Calorie calculator</string>
    <string name="error_whole_numbers">Inputs for age,height,weight must be whole numbers!</string>
    <string name="yourDailyIntake">Your daily intake should be</string>
</resources>