<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/calorieLowerBond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/caloriesLowerBond"/>

    <EditText
        android:id="@+id/calorieUpperBond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/caloriesUpperBond" />

    <Button
        android:id="@+id/calorieFilterButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fetchCalories" />

    <Button
        android:id="@+id/calorieSortButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sortAndFilter" />

</LinearLayout>