<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/saveMealBackButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/saveMealPic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveMealBackButton" />

    <Button
        android:id="@+id/saveMealDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveMealPic" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/saveMealDate"
        app:layout_constraintTop_toBottomOf="@+id/saveMealPic">

        <RadioButton
            android:id="@+id/breakfast"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="true"
            android:padding="4dp"
            android:text="@string/breakfast"
            android:textAlignment="center"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/lunch"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false"
            android:padding="4dp"
            android:text="@string/lunch"
            android:textAlignment="center"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/supper"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false"
            android:padding="4dp"
            android:text="@string/supper"
            android:textAlignment="center"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/dinner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false"
            android:padding="4dp"
            android:text="@string/dinner"
            android:textAlignment="center"
            android:textSize="20sp" />

    </RadioGroup>

    <Button
        android:id="@+id/saveMealSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/save_meal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>